--- a/react-base/package.json
+++ b/react-base/package.json
@@ -12,7 +12,9 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "chart.js": "^2.7.3",
     "css-loader": "0.28.7",
+    "d3": "^5.7.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -27,15 +29,18 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.3.0",
+    "react-datepicker": "^1.7.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.3.0",
     "ryuu.js": "^2.5.10",
+    "simple-statistics": "^6.1.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
