--- a/react-base/public/manifest.json
+++ b/react-base/public/manifest.json
@@ -1,12 +1,17 @@
 {
-  "short_name": "Domo React App",
-  "name": "Domo React App Sample",
-  "version": "1.0.0",
+  "short_name": "CNF - Marketing Mix Analysis",
+  "name": "CNF - Marketing Mix Analysis",
+  "version": "0.1.0",
   "size": {
-    "width": 2,
+    "width": 6,
     "height": 2
   },
   "mapping": [
-
-  ]
+    {
+      "dataSetId": "49059d29-7005-46c4-8a70-7751368dd744",
+      "alias": "Touchpoints",
+      "fields": []
+    }
+  ],
+  "id": "2f64d741-7594-4d14-8108-92071946a4eb"
 }
